# Eclipse

./: .gitignore  DESIGN  README  TODO
apostle/: Cargo.toml
apostle/apostle-bin/: Cargo.toml
apostle/apostle-bin/src/: config.rs  ledger.rs  main.rs  utils.rs
apostle/apostle-lib/: Cargo.toml
apostle/apostle-lib/src/: lib.rs
behelit/: Cargo.toml
behelit/behelitDB/: db  snap.0000000000000178
behelit/src/: database.rs  main.rs
development/: DESIGN  TODO  blueprint.excalidraw
godhand/: Cargo.toml
sovereign/: Cargo.toml
