[package]
name = "apostle-bin"
version = "0.0.1"
edition = "2021"

[dependencies]
dll-syringe         =   {version = "0.15.*"}
process_list        =   {version = "0.2.*"}
tokio               =   {version = "1.32.*", features = ["full"]}
windows             =   {version = "0.51.*", features = ["Win32_System_DataExchange", "Win32_Foundation", "Win32_System_Memory"]}   
serde               =   {version = "1.0.*",  features = ["derive"]}
bincode             =   {version = "1.3.*"}
chacha20poly1305    =   {version = "0.10.*", features = ["reduced-round"]}
zeroize             =   {version = "1.6.*"}
time                =   {version = "0.3.*"}